--- a/scrapy.cfg
+++ b/scrapy.cfg
@@ -4,8 +4,8 @@
 # http://doc.scrapy.org/topics/scrapyd.html
 
 [settings]
-default = hs.settings
+default = em.settings
 
 [deploy]
 #url = http://localhost:6800/
-project = hs
+project = em
